Change on dashboard,  link to the products has been added.

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,1 +1,4 @@
 <h1>Welcome to your Borrowitz dashboard! </h1>
+<h2>Hey <%= User.find(current_user.id).email %> nice to see you online! </h2>
+
+<%= link_to "* Go to the products", products_path %> 
